feat: add image implementation
